# InariWrite

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.changeset/: README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/cli/: package.json
apps/cli/src/: check.test.ts  check.ts  index.ts  loadPlugins.test.ts  loadPlugins.ts  publish.test.ts  publish.ts
apps/cli/test-fixtures/: extraPlugin.mjs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/web/: capacitor.config.ts  index.html  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/scripts/: check-dist-budget.mjs
apps/web/src/: App.tsx  EditorWorkspace.tsx  MarkdownEditor.tsx  index.css  main.tsx
apps/web/src/hooks/: useMarkdownPreview.ts
apps/web/src/i18n/: init.ts
apps/web/src/theme/: boot.ts  storage.ts
apps/web/src/workers/: markdownPreview.worker.ts
docs/: README.md  RELEASE.md  architecture.md  good-first-issues.md  internationalization.md  open-source-strategy.md  optional-cloud.md  platforms.md  plugins.md  plugins.mn.md  roadmap.md
