[package]
name = "inariwrite-desktop"
version = "0.0.1"
description = "InariWrite desktop shell"
authors = ["InariWrite contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
